Ensure Polish users recognise that Polish is not a supported language for Unscrub @ Privacy policy/Your Data

--- a/policy/privacy.html
+++ b/policy/privacy.html
@@ -180,7 +180,11 @@ footer {
     </svg>
     <span>supporting lgbt / wspieranie lgbt</span>
   </span>
+  <div style="margin-top:8px; font-style:italic; color:#aaa; font-size:0.9rem;">
+    przepraszamy, ale unscrub nie obsługuje jeszcze języka polskiego. przepraszam!
+  </div>
 </footer>
+
 
 <script>
   const dropdownBtn = document.getElementById('dropdownBtn');
