--- a/policy/privacy.html
+++ b/policy/privacy.html
@@ -173,7 +173,7 @@ footer {
   </div>
   <hr>
 <footer id="footer">
-  keep unscrubbing!
+  <span id="footerMain">keep unscrubbing!</span>
   <span style="display:inline-flex; align-items:center; gap:8px; margin-left:10px;">
     <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="24" height="24">
       <path d="M5.7 22.2c.1.6-.3 1.1-.9 1.2-.6.1-1.1-.3-1.2-.9L3.1 18.7 0.8 5.6c-.2-1 .3-2 1.1-2.5 1.6-.8 3-.3 4.4-.1 1.5.2 3 .1 4.5-.4 1.1-.3 2.3-.8 3.5-1.4.9-.4 2 .1 2.5 1l2.1 12.2c.2 1-.3 2-1.1 2.4-1.6.8-3 .3-4.4.1-1.5-.2-3-.1-4.5.4-1.1.3-2.3.8-3.5 1.4l.6 3.7z" fill="#fff"></path>
@@ -184,6 +184,7 @@ footer {
     przepraszamy, ale unscrub nie obsługuje jeszcze języka polskiego. przepraszam!
   </div>
 </footer>
+
 
 
 <script>
