--- a/policy/privacy.html
+++ b/policy/privacy.html
@@ -207,14 +207,14 @@ function setLanguage(lang) {
     content.innerHTML = `
       <p>podczas gry w unscrub szanujemy twoją prywatność. nie zbieramy, nie sprzedajemy ani nie przechowujemy żadnych twoich danych osobowych. wszystko, co robisz na naszej stronie, pozostaje całkowicie prywatne — nawet twórca nie ma do tego dostępu.</p>
       <p>dziękujemy za odwiedziny! obiecujemy, że twoje informacje są bezpieczne i chronione.</p>`;
-    footer.textContent = 'kontynuuj unscrubowanie!';
+footer.textContent = 'kontynuuj unscrubowanie!';
     langLabel.textContent = 'Polski';
   } else {
     title.textContent = 'Your Data & Usage';
     content.innerHTML = `
       <p>while you play unscrub, we respect your privacy. we do not collect, sell, or store any of your personal data. everything you do on our site stays completely private — not even the creator can see it.</p>
       <p>thank you for visiting! we promise your information is safe and secure.</p>`;
-    footer.textContent = 'keep unscrubbing!';
+document.getElementById('footerMain').textContent = 'keep unscrubbing!';
     langLabel.textContent = 'English';
   }
   flagIcon.innerHTML = flags[lang];
