--- a/policy/privacy.html
+++ b/policy/privacy.html
@@ -175,15 +175,55 @@ footer {
 <footer id="footer">
   <span id="footerMain">keep unscrubbing!</span>
   <span style="display:inline-flex; align-items:center; gap:8px; margin-left:10px;">
-    <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="24" height="24">
-      <path d="M5.7 22.2c.1.6-.3 1.1-.9 1.2-.6.1-1.1-.3-1.2-.9L3.1 18.7 0.8 5.6c-.2-1 .3-2 1.1-2.5 1.6-.8 3-.3 4.4-.1 1.5.2 3 .1 4.5-.4 1.1-.3 2.3-.8 3.5-1.4.9-.4 2 .1 2.5 1l2.1 12.2c.2 1-.3 2-1.1 2.4-1.6.8-3 .3-4.4.1-1.5-.2-3-.1-4.5.4-1.1.3-2.3.8-3.5 1.4l.6 3.7z" fill="#fff"></path>
+    <svg viewBox="0 -4 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+      <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+      <g id="SVGRepo_iconCarrier"> 
+        <g clip-path="url(#clip0_1310_7784)"> 
+          <path d="M28 0H0V20H28V0Z" fill="url(#paint0_linear_1310_7784)"></path> 
+          <path d="M28 0H0V4H28V0Z" fill="url(#paint1_linear_1310_7784)"></path> 
+          <path d="M28 4H0V8H28V4Z" fill="url(#paint2_linear_1310_7784)"></path> 
+          <path d="M28 8H0V12H28V8Z" fill="url(#paint3_linear_1310_7784)"></path> 
+          <path d="M28 12H0V16H28V12Z" fill="url(#paint4_linear_1310_7784)"></path> 
+          <path d="M28 16H0V20H28V16Z" fill="url(#paint5_linear_1310_7784)"></path> 
+        </g> 
+        <defs> 
+          <linearGradient id="paint0_linear_1310_7784" x1="14" y1="0" x2="14" y2="20" gradientUnits="userSpaceOnUse"> 
+            <stop stop-color="white"></stop> 
+            <stop offset="1" stop-color="#F0F0F0"></stop> 
+          </linearGradient> 
+          <linearGradient id="paint1_linear_1310_7784" x1="14" y1="0" x2="14" y2="4" gradientUnits="userSpaceOnUse"> 
+            <stop stop-color="#F71E24"></stop> 
+            <stop offset="1" stop-color="#FB141B"></stop> 
+          </linearGradient> 
+          <linearGradient id="paint2_linear_1310_7784" x1="14" y1="4" x2="14" y2="8" gradientUnits="userSpaceOnUse"> 
+            <stop stop-color="#FB6C2C"></stop> 
+            <stop offset="1" stop-color="#FC6420"></stop> 
+          </linearGradient> 
+          <linearGradient id="paint3_linear_1310_7784" x1="14" y1="8" x2="14" y2="12" gradientUnits="userSpaceOnUse"> 
+            <stop stop-color="#FDFC42"></stop> 
+            <stop offset="1" stop-color="#FFFD38"></stop> 
+          </linearGradient> 
+          <linearGradient id="paint4_linear_1310_7784" x1="14" y1="12" x2="14" y2="16" gradientUnits="userSpaceOnUse"> 
+            <stop stop-color="#238F35"></stop> 
+            <stop offset="1" stop-color="#1C7E2C"></stop> 
+          </linearGradient> 
+          <linearGradient id="paint5_linear_1310_7784" x1="14" y1="16" x2="14" y2="20" gradientUnits="userSpaceOnUse"> 
+            <stop stop-color="#0F62FA"></stop> 
+            <stop offset="1" stop-color="#0059FC"></stop> 
+          </linearGradient> 
+          <clipPath id="clip0_1310_7784"> 
+            <rect width="28" height="20" rx="2" fill="white"></rect> 
+          </clipPath> 
+        </defs>
+      </g>
     </svg>
-    <span>supporting lgbt / wspieranie lgbt</span>
   </span>
   <div style="margin-top:8px; font-style:italic; color:#aaa; font-size:0.9rem;">
     przepraszamy, ale unscrub nie obsługuje jeszcze języka polskiego. przepraszam!
   </div>
 </footer>
+
 
 
 
