Add a dotted line so the two seperated sections "connect2>

--- a/index.html
+++ b/index.html
@@ -96,6 +96,10 @@
       <div id="results"></div>
     </div>
 
+    <!-- vertical dashed line connector -->
+<div class="connector-line"></div>
+
+
 <!-- Separate section below the game -->
 <div class="bottom-section">
   <button id="generateBtn" type="button">
