Privacy.html Redirect

--- a/policy/privacy.html
+++ b/policy/privacy.html
@@ -1,293 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML 2.0//EN">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Your Data / Twoje dane</title>
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
-
-body, input, button, textarea, select, h1, .word-box, .result-item, #wpmDisplay, .correct-overlay {
-  font-family: 'Poppins', "Inter", Arial, sans-serif;
-}
-
-body {
-  margin: 0;
-  background-color: #000;
-  color: #e0e0e0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  min-height: 100vh;
-  padding: 0 1rem;
-}
-
-h1 {
-  margin-top: 60px;
-  font-size: 2.2rem;
-  text-align: center;
-  color: #fff;
-  letter-spacing: 1px;
-}
-
-.language-dropdown {
-  position: absolute;
-  top: 15px;
-  left: 15px;
-  background: #111;
-  color: #fff;
-  border: 1px solid #333;
-  font-size: 0.95rem;
-  cursor: pointer;
-  outline: none;
-  display: flex;
-  align-items: center;
-  gap: 8px;
-  padding: 6px 10px;
-  border-radius: 0;
-}
-
-.language-dropdown:hover {
-  background: #222;
-  border-color: #555;
-}
-
-.go-back-btn {
-  position: absolute;
-  top: 15px;
-  left: 150px;
-  background: #111;
-  color: #fff;
-  border: 1px solid #333;
-  font-size: 0.95rem;
-  cursor: pointer;
-  padding: 6px 10px;
-  border-radius: 0;
-  transition: background 0.2s ease, border-color 0.2s ease;
-}
-
-.go-back-btn:hover {
-  background: #222;
-  border-color: #555;
-}
-
-.flag {
-  width: 24px;
-  height: 24px;
-  display: inline-block;
-  vertical-align: middle;
-}
-
-.dropdown-options {
-  position: absolute;
-  top: 45px;
-  left: 15px;
-  background: #111;
-  border: 1px solid #333;
-  display: none;
-  flex-direction: column;
-  overflow: hidden;
-  z-index: 100;
-  border-radius: 0;
-}
-
-.dropdown-option {
-  display: flex;
-  align-items: center;
-  gap: 8px;
-  padding: 6px 10px;
-  cursor: pointer;
-}
-
-.dropdown-option:hover {
-  background: #222;
-}
-
-.container {
-  max-width: 700px;
-  width: 100%;
-  background: #111;
-  padding: 40px 30px;
-  margin: 30px 0;
-  border: 1px solid #333;
-  text-align: left;
-  border-radius: 0;
-}
-
-p {
-  font-size: 1rem;
-  line-height: 1.7;
-  margin-bottom: 1.2rem;
-  color: #ccc;
-}
-
-hr {
-  border: none;
-  border-top: 1px solid #333;
-  margin: 30px 0;
-  width: 80%;
-}
-
-footer {
-  margin-bottom: 40px;
-  font-style: italic;
-  color: #aaa;
-  font-size: 0.95rem;
-  text-align: center;
-}
-  </style>
+   <title>Please Wait...</title>
+   <meta http-equiv="refresh" content="0; url=https://home.astrarune.com">
+   <script>
+      window.location.href = "https://unscrub.astrarune.com/policy";
+   </script>
 </head>
 <body>
-  <div class="language-dropdown" id="dropdownBtn">
-    <span class="flag" id="flagIcon"></span>
-    <span id="langLabel">English</span>
-  </div>
-
-  <button id="goBackBtn" class="go-back-btn">Go Back / Wracać</button>
-
-  <div class="dropdown-options" id="dropdownOptions">
-    <div class="dropdown-option" data-lang="en">
-      <span class="flag">
-        <svg viewBox="0 -4 28 28" xmlns="http://www.w3.org/2000/svg">
-          <rect width="28" height="20" fill="#fff"/>
-          <path d="M0 8h28v4H0zM12 0h4v20h-4z" fill="#c00"/>
-        </svg>
-      </span>
-      <span>English</span>
-    </div>
-    <div class="dropdown-option" data-lang="pl">
-      <span class="flag">
-        <svg viewBox="0 0 36 36">
-          <rect width="36" height="18" fill="#fff"/>
-          <rect y="18" width="36" height="18" fill="#dc143c"/>
-        </svg>
-      </span>
-      <span>Polski</span>
-    </div>
-  </div>
-
-  <h1>Your Data & Usage</h1>
-  <div class="container" id="content">
-    <p>while you play unscrub, we respect your privacy. we do not collect, sell, or store any of your personal data. everything you do on our site stays completely private — not even the creator can see it.</p>
-    <p>thank you for visiting! we promise your information is safe and secure.</p>
-  </div>
-  <hr>
-<footer id="footer">
-  <span id="footerMain">keep unscrubbing!</span>
-  <span style="display:inline-flex; align-items:center; gap:8px; margin-left:10px;">
-    <svg viewBox="0 -4 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
-      <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-      <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
-      <g id="SVGRepo_iconCarrier"> 
-        <g clip-path="url(#clip0_1310_7784)"> 
-          <path d="M28 0H0V20H28V0Z" fill="url(#paint0_linear_1310_7784)"></path> 
-          <path d="M28 0H0V4H28V0Z" fill="url(#paint1_linear_1310_7784)"></path> 
-          <path d="M28 4H0V8H28V4Z" fill="url(#paint2_linear_1310_7784)"></path> 
-          <path d="M28 8H0V12H28V8Z" fill="url(#paint3_linear_1310_7784)"></path> 
-          <path d="M28 12H0V16H28V12Z" fill="url(#paint4_linear_1310_7784)"></path> 
-          <path d="M28 16H0V20H28V16Z" fill="url(#paint5_linear_1310_7784)"></path> 
-        </g> 
-        <defs> 
-          <linearGradient id="paint0_linear_1310_7784" x1="14" y1="0" x2="14" y2="20" gradientUnits="userSpaceOnUse"> 
-            <stop stop-color="white"></stop> 
-            <stop offset="1" stop-color="#F0F0F0"></stop> 
-          </linearGradient> 
-          <linearGradient id="paint1_linear_1310_7784" x1="14" y1="0" x2="14" y2="4" gradientUnits="userSpaceOnUse"> 
-            <stop stop-color="#F71E24"></stop> 
-            <stop offset="1" stop-color="#FB141B"></stop> 
-          </linearGradient> 
-          <linearGradient id="paint2_linear_1310_7784" x1="14" y1="4" x2="14" y2="8" gradientUnits="userSpaceOnUse"> 
-            <stop stop-color="#FB6C2C"></stop> 
-            <stop offset="1" stop-color="#FC6420"></stop> 
-          </linearGradient> 
-          <linearGradient id="paint3_linear_1310_7784" x1="14" y1="8" x2="14" y2="12" gradientUnits="userSpaceOnUse"> 
-            <stop stop-color="#FDFC42"></stop> 
-            <stop offset="1" stop-color="#FFFD38"></stop> 
-          </linearGradient> 
-          <linearGradient id="paint4_linear_1310_7784" x1="14" y1="12" x2="14" y2="16" gradientUnits="userSpaceOnUse"> 
-            <stop stop-color="#238F35"></stop> 
-            <stop offset="1" stop-color="#1C7E2C"></stop> 
-          </linearGradient> 
-          <linearGradient id="paint5_linear_1310_7784" x1="14" y1="16" x2="14" y2="20" gradientUnits="userSpaceOnUse"> 
-            <stop stop-color="#0F62FA"></stop> 
-            <stop offset="1" stop-color="#0059FC"></stop> 
-          </linearGradient> 
-          <clipPath id="clip0_1310_7784"> 
-            <rect width="28" height="20" rx="2" fill="white"></rect> 
-          </clipPath> 
-        </defs>
-      </g>
-    </svg>
-  </span>
-  <div style="margin-top:8px; font-style:italic; color:#aaa; font-size:0.9rem;">
-    przepraszamy, ale unscrub nie obsługuje jeszcze języka polskiego. przepraszam!
-  </div>
-</footer>
-
-
-
-
-<script>
-  const dropdownBtn = document.getElementById('dropdownBtn');
-  const dropdownOptions = document.getElementById('dropdownOptions');
-  const flagIcon = document.getElementById('flagIcon');
-  const langLabel = document.getElementById('langLabel');
-  const content = document.getElementById('content');
-  const title = document.querySelector('h1');
-  const footer = document.getElementById('footer');
-
-const flags = {
-  en: `<svg viewBox="0 -4 28 28" xmlns="http://www.w3.org/2000/svg"><rect width="28" height="20" fill="#fff"/><path d="M0 8h28v4H0zM12 0h4v20h-4z" fill="#c00"/></svg>`,
-  pl: `<svg viewBox="0 0 36 36" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid meet" fill="#000000"><path fill="#EEE" d="M32 5H4a4 4 0 0 0-4 4v9h36V9a4 4 0 0 0-4-4z"></path><path fill="#DC143C" d="M0 27a4 4 0 0 0 4 4h28a4 4 0 0 0 4-4v-9H0v9z"></path></svg>`
-};
-
-function setLanguage(lang) {
-  if (lang === 'pl') {
-    title.textContent = 'Twoje dane i użytkowanie';
-    content.innerHTML = `
-      <p>podczas gry w unscrub szanujemy twoją prywatność. nie zbieramy, nie sprzedajemy ani nie przechowujemy żadnych twoich danych osobowych. wszystko, co robisz na naszej stronie, pozostaje całkowicie prywatne — nawet twórca nie ma do tego dostępu.</p>
-      <p>dziękujemy za odwiedziny! obiecujemy, że twoje informacje są bezpieczne i chronione.</p>`;
-footer.textContent = 'kontynuuj unscrubowanie!';
-    langLabel.textContent = 'Polski';
-  } else {
-    title.textContent = 'Your Data & Usage';
-    content.innerHTML = `
-      <p>while you play unscrub, we respect your privacy. we do not collect, sell, or store any of your personal data. everything you do on our site stays completely private — not even the creator can see it.</p>
-      <p>thank you for visiting! we promise your information is safe and secure.</p>`;
-document.getElementById('footerMain').textContent = 'keep unscrubbing!';
-    langLabel.textContent = 'English';
-  }
-  flagIcon.innerHTML = flags[lang];
-  localStorage.setItem('preferredLanguage', lang);
-  dropdownOptions.style.display = 'none';
-}
-
-dropdownBtn.addEventListener('click', () => {
-  dropdownOptions.style.display = dropdownOptions.style.display === 'flex' ? 'none' : 'flex';
-});
-
-dropdownOptions.addEventListener('click', (e) => {
-  const option = e.target.closest('.dropdown-option');
-  if (option) setLanguage(option.dataset.lang);
-});
-
-const savedLang = localStorage.getItem('preferredLanguage');
-if (savedLang) setLanguage(savedLang);
-else {
-  const userLang = navigator.language || navigator.userLanguage;
-  if (userLang.toLowerCase().startsWith('pl')) setLanguage('pl');
-  else setLanguage('en');
-}
-
-document.addEventListener('click', (e) => {
-  if (!dropdownBtn.contains(e.target) && !dropdownOptions.contains(e.target)) {
-    dropdownOptions.style.display = 'none';
-  }
-});
-
-document.getElementById('goBackBtn').addEventListener('click', () => {
-  window.location.href = 'https://unscrub.astrarune.com';
-});
-</script>
+   <h1>Redirecting...</h1>
+   <p>If you are not redirected automatically, <a href="https://unscrub.astrarune.com/policy">click here</a>.</p>
 </body>
 </html>
+
