--- a/policy/index.html
+++ b/policy/index.html
@@ -228,13 +228,13 @@ footer {
 
 
 <script>
-  const dropdownBtn = document.getElementById('dropdownBtn');
-  const dropdownOptions = document.getElementById('dropdownOptions');
-  const flagIcon = document.getElementById('flagIcon');
-  const langLabel = document.getElementById('langLabel');
-  const content = document.getElementById('content');
-  const title = document.querySelector('h1');
-  const footer = document.getElementById('footer');
+const dropdownBtn = document.getElementById('dropdownBtn');
+const dropdownOptions = document.getElementById('dropdownOptions');
+const flagIcon = document.getElementById('flagIcon');
+const langLabel = document.getElementById('langLabel');
+const content = document.getElementById('content');
+const title = document.querySelector('h1');
+const footer = document.getElementById('footer');
 
 const flags = {
   en: `<svg viewBox="0 -4 28 28" xmlns="http://www.w3.org/2000/svg"><rect width="28" height="20" fill="#fff"/><path d="M0 8h28v4H0zM12 0h4v20h-4z" fill="#c00"/></svg>`,
@@ -247,14 +247,14 @@ function setLanguage(lang) {
     content.innerHTML = `
       <p>podczas gry w unscrub szanujemy twoją prywatność. nie zbieramy, nie sprzedajemy ani nie przechowujemy żadnych twoich danych osobowych. wszystko, co robisz na naszej stronie, pozostaje całkowicie prywatne — nawet twórca nie ma do tego dostępu.</p>
       <p>dziękujemy za odwiedziny! obiecujemy, że twoje informacje są bezpieczne i chronione.</p>`;
-footer.textContent = 'kontynuuj unscrubowanie!';
+    footer.textContent = 'kontynuuj unscrubowanie!';
     langLabel.textContent = 'Polski';
   } else {
     title.textContent = 'Your Data & Usage';
     content.innerHTML = `
       <p>while you play unscrub, we respect your privacy. we do not collect, sell, or store any of your personal data. everything you do on our site stays completely private — not even the creator can see it.</p>
       <p>thank you for visiting! we promise your information is safe and secure.</p>`;
-document.getElementById('footerMain').textContent = 'keep unscrubbing!';
+    document.getElementById('footerMain').textContent = 'keep unscrubbing!';
     langLabel.textContent = 'English';
   }
   flagIcon.innerHTML = flags[lang];
@@ -268,7 +268,11 @@ dropdownBtn.addEventListener('click', () => {
 
 dropdownOptions.addEventListener('click', (e) => {
   const option = e.target.closest('.dropdown-option');
-  if (option) setLanguage(option.dataset.lang);
+  if (option) {
+    // Clear localStorage before setting the new language
+    localStorage.removeItem('preferredLanguage');
+    setLanguage(option.dataset.lang);
+  }
 });
 
 const savedLang = localStorage.getItem('preferredLanguage');
