--- a/policy/index.html
+++ b/policy/index.html
@@ -166,7 +166,7 @@ footer {
     </div>
   </div>
 
-  <h1>Your Data & Usage</h1>
+  <h1>Your Data & Usage [BETA]</h1>
   <div class="container" id="content">
     <p>while you play unscrub, we respect your privacy. we do not collect, sell, or store any of your personal data. everything you do on our site stays completely private — not even the creator can see it.</p>
     <p>thank you for visiting! we promise your information is safe and secure.</p>
@@ -243,14 +243,14 @@ const flags = {
 
 function setLanguage(lang) {
   if (lang === 'pl') {
-    title.textContent = 'Twoje dane i użytkowanie';
+    title.textContent = 'Twoje dane i użytkowanie [BETA]';
     content.innerHTML = `
       <p>podczas gry w unscrub szanujemy twoją prywatność. nie zbieramy, nie sprzedajemy ani nie przechowujemy żadnych twoich danych osobowych. wszystko, co robisz na naszej stronie, pozostaje całkowicie prywatne — nawet twórca nie ma do tego dostępu.</p>
       <p>dziękujemy za odwiedziny! obiecujemy, że twoje informacje są bezpieczne i chronione.</p>`;
     footer.textContent = 'kontynuuj unscrubowanie!';
     langLabel.textContent = 'Polski';
   } else {
-    title.textContent = 'Your Data & Usage';
+    title.textContent = 'Your Data & Usage [BETA]';
     content.innerHTML = `
       <p>while you play unscrub, we respect your privacy. we do not collect, sell, or store any of your personal data. everything you do on our site stays completely private — not even the creator can see it.</p>
       <p>thank you for visiting! we promise your information is safe and secure.</p>`;
