Ensure the Polish user knows unscrub is not supporting Polish for now.

--- a/policy/index.html
+++ b/policy/index.html
@@ -247,7 +247,7 @@ function setLanguage(lang) {
     content.innerHTML = `
       <p>podczas gry w unscrub szanujemy twoją prywatność. nie zbieramy, nie sprzedajemy ani nie przechowujemy żadnych twoich danych osobowych. wszystko, co robisz na naszej stronie, pozostaje całkowicie prywatne — nawet twórca nie ma do tego dostępu.</p>
       <p>dziękujemy za odwiedziny! obiecujemy, że twoje informacje są bezpieczne i chronione.</p>`;
-    footer.textContent = 'kontynuuj unscrubowanie!';
+    footer.textContent = 'przepraszamy, ale unscrub nie obsługuje jeszcze języka polskiego. przepraszam!';
     langLabel.textContent = 'Polski';
   } else {
     title.textContent = 'Your Data & Usage [BETA]';
