Replace Polish text in English language with "Supporting LGBT everyday.

--- a/policy/index.html
+++ b/policy/index.html
@@ -220,7 +220,7 @@ footer {
     </svg>
   </span>
   <div style="margin-top:8px; font-style:italic; color:#aaa; font-size:0.9rem;">
-    przepraszamy, ale unscrub nie obsługuje jeszcze języka polskiego. przepraszam!
+    Supporting LGBT everyday.
   </div>
 </footer>
 
