--- a/policy/index.html
+++ b/policy/index.html
@@ -166,10 +166,11 @@ footer {
     </div>
   </div>
 
-  <h1>Your Data & Usage [BETA]</h1>
-  <div class="container" id="content">
-    <p>while you play unscrub, we respect your privacy. we do not collect, sell, or store any of your personal data. everything you do on our site stays completely private — not even the creator can see it.</p>
-    <p>thank you for visiting! we promise your information is safe and secure.</p>
+<h1>Your Data & Usage [BETA]</h1>
+<div class="container" id="content">
+  <p>While you play unscrub, we want to make sure you feel confident and at ease knowing that your privacy is our top priority. We fully respect your right to control your personal information, and we are committed to maintaining the highest level of transparency and security when it comes to your data. Unlike many online services, we do not collect, sell, or store any of your personal data, nor do we track your online activity across the web. Everything you do on our site, whether it’s interacting with the game, making a move, or browsing around, stays completely private and protected by our strong security measures. We believe that privacy is a fundamental right, which is why we take extra care to ensure that not even the creators, developers, or administrators of unscrub can access, view, or store any of your data. You are in complete control of your experience, and we are dedicated to ensuring that you feel safe and anonymous while enjoying the platform. You can rest assured knowing that your actions and information are never shared with third parties, and we never engage in any data harvesting or intrusive tracking practices. When you play unscrub, your privacy is our responsibility, and we take that responsibility seriously. We want you to focus on having fun and enjoying the game without worrying about your data being compromised or misused in any way.</p>
+  <p>Thank you for visiting! We promise your information is safe and secure.</p>
+</div>
   </div>
   <hr>
 <footer id="footer">
@@ -245,15 +246,15 @@ function setLanguage(lang) {
   if (lang === 'pl') {
     title.textContent = 'Twoje dane i użytkowanie [BETA]';
     content.innerHTML = `
-      <p>podczas gry w unscrub szanujemy twoją prywatność. nie zbieramy, nie sprzedajemy ani nie przechowujemy żadnych twoich danych osobowych. wszystko, co robisz na naszej stronie, pozostaje całkowicie prywatne — nawet twórca nie ma do tego dostępu.</p>
-      <p>dziękujemy za odwiedziny! obiecujemy, że twoje informacje są bezpieczne i chronione.</p>`;
+  <p>Podczas gdy grasz w unscrub, chcemy, abyś czuł się pewnie i spokojnie, wiedząc, że Twoja prywatność jest dla nas najważniejsza. W pełni szanujemy Twoje prawo do kontrolowania swoich danych osobowych i zobowiązujemy się do utrzymania najwyższego poziomu przejrzystości i bezpieczeństwa w odniesieniu do Twoich informacji. W przeciwieństwie do wielu usług online, nie zbieramy, nie sprzedajemy ani nie przechowujemy żadnych Twoich danych osobowych, ani nie śledzimy Twojej aktywności online w internecie. Wszystko, co robisz na naszej stronie, czy to interakcje z grą, wykonywanie ruchów, czy przeglądanie strony, pozostaje całkowicie prywatne i chronione przez nasze silne środki bezpieczeństwa. Wierzymy, że prywatność jest podstawowym prawem, dlatego dokładamy wszelkich starań, aby nawet twórcy, deweloperzy lub administratorzy unscrub nie mieli dostępu do Twoich danych, nie mogli ich przeglądać ani przechowywać. Jesteś w pełni kontrolą swojego doświadczenia, a my zobowiązujemy się do tego, abyś czuł się bezpiecznie i anonimowo, korzystając z platformy. Możesz być pewny, że Twoje działania i dane nigdy nie będą udostępniane osobom trzecim, a my nigdy nie angażujemy się w zbieranie danych ani inwazyjne praktyki śledzenia. Kiedy grasz w unscrub, Twoja prywatność jest naszą odpowiedzialnością, i traktujemy tę odpowiedzialność bardzo poważnie. Chcemy, abyś mógł skupić się na zabawie i cieszeniu się grą, nie martwiąc się o to, że Twoje dane zostaną skompromitowane lub niewłaściwie wykorzystane w jakikolwiek sposób.</p>
+  <p>Dziękujemy za wizytę! Obiecujemy, że Twoje informacje są bezpieczne i chronione.</p>
     footer.textContent = 'przepraszamy, ale unscrub nie obsługuje jeszcze języka polskiego. przepraszam!';
     langLabel.textContent = 'Polski';
   } else {
     title.textContent = 'Your Data & Usage [BETA]';
     content.innerHTML = `
-      <p>while you play unscrub, we respect your privacy. we do not collect, sell, or store any of your personal data. everything you do on our site stays completely private — not even the creator can see it.</p>
-      <p>thank you for visiting! we promise your information is safe and secure.</p>`;
+  <p>While you play unscrub, we want to make sure you feel confident and at ease knowing that your privacy is our top priority. We fully respect your right to control your personal information, and we are committed to maintaining the highest level of transparency and security when it comes to your data. Unlike many online services, we do not collect, sell, or store any of your personal data, nor do we track your online activity across the web. Everything you do on our site, whether it’s interacting with the game, making a move, or browsing around, stays completely private and protected by our strong security measures. We believe that privacy is a fundamental right, which is why we take extra care to ensure that not even the creators, developers, or administrators of unscrub can access, view, or store any of your data. You are in complete control of your experience, and we are dedicated to ensuring that you feel safe and anonymous while enjoying the platform. You can rest assured knowing that your actions and information are never shared with third parties, and we never engage in any data harvesting or intrusive tracking practices. When you play unscrub, your privacy is our responsibility, and we take that responsibility seriously. We want you to focus on having fun and enjoying the game without worrying about your data being compromised or misused in any way.</p>
+  <p>Thank you for visiting! We promise your information is safe and secure.</p>
     document.getElementById('footerMain').textContent = 'keep unscrubbing!';
     langLabel.textContent = 'English';
   }
