--- a/policy/index.html
+++ b/policy/index.html
@@ -239,60 +239,77 @@ const footer = document.getElementById('footer');
 
 const flags = {
   en: `<svg viewBox="0 -4 28 28" xmlns="http://www.w3.org/2000/svg"><rect width="28" height="20" fill="#fff"/><path d="M0 8h28v4H0zM12 0h4v20h-4z" fill="#c00"/></svg>`,
-  pl: `<svg viewBox="0 0 36 36" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid meet" fill="#000000"><path fill="#EEE" d="M32 5H4a4 4 0 0 0-4 4v9h36V9a4 4 0 0 0-4-4z"></path><path fill="#DC143C" d="M0 27a4 4 0 0 0 4 4h28a4 4 0 0 0 4-4v-9H0v9z"></path></svg>`
+  pl: `<svg viewBox="0 0 36 36" xmlns="http://www.w3.org/2000/svg"><rect width="36" height="18" fill="#fff"/><rect y="18" width="36" height="18" fill="#dc143c"/></svg>`
 };
 
 function setLanguage(lang) {
   if (lang === 'pl') {
     title.textContent = 'Twoje dane i użytkowanie [BETA]';
     content.innerHTML = `
-  <p>Podczas gdy grasz w unscrub, chcemy, abyś czuł się pewnie i spokojnie, wiedząc, że Twoja prywatność jest dla nas najważniejsza. W pełni szanujemy Twoje prawo do kontrolowania swoich danych osobowych i zobowiązujemy się do utrzymania najwyższego poziomu przejrzystości i bezpieczeństwa w odniesieniu do Twoich informacji. W przeciwieństwie do wielu usług online, nie zbieramy, nie sprzedajemy ani nie przechowujemy żadnych Twoich danych osobowych, ani nie śledzimy Twojej aktywności online w internecie. Wszystko, co robisz na naszej stronie, czy to interakcje z grą, wykonywanie ruchów, czy przeglądanie strony, pozostaje całkowicie prywatne i chronione przez nasze silne środki bezpieczeństwa. Wierzymy, że prywatność jest podstawowym prawem, dlatego dokładamy wszelkich starań, aby nawet twórcy, deweloperzy lub administratorzy unscrub nie mieli dostępu do Twoich danych, nie mogli ich przeglądać ani przechowywać. Jesteś w pełni kontrolą swojego doświadczenia, a my zobowiązujemy się do tego, abyś czuł się bezpiecznie i anonimowo, korzystając z platformy. Możesz być pewny, że Twoje działania i dane nigdy nie będą udostępniane osobom trzecim, a my nigdy nie angażujemy się w zbieranie danych ani inwazyjne praktyki śledzenia. Kiedy grasz w unscrub, Twoja prywatność jest naszą odpowiedzialnością, i traktujemy tę odpowiedzialność bardzo poważnie. Chcemy, abyś mógł skupić się na zabawie i cieszeniu się grą, nie martwiąc się o to, że Twoje dane zostaną skompromitowane lub niewłaściwie wykorzystane w jakikolwiek sposób.</p>
-  <p>Dziękujemy za wizytę! Obiecujemy, że Twoje informacje są bezpieczne i chronione.</p>
+      <p>Podczas gdy grasz w unscrub, chcemy, abyś czuł się pewnie i spokojnie, wiedząc, że Twoja prywatność jest dla nas najważniejsza...</p>
+      <p>Dziękujemy za wizytę! Obiecujemy, że Twoje informacje są bezpieczne i chronione.</p>
+    `;
     footer.textContent = 'przepraszamy, ale unscrub nie obsługuje jeszcze języka polskiego. przepraszam!';
     langLabel.textContent = 'Polski';
   } else {
     title.textContent = 'Your Data & Usage [BETA]';
     content.innerHTML = `
-  <p>While you play unscrub, we want to make sure you feel confident and at ease knowing that your privacy is our top priority. We fully respect your right to control your personal information, and we are committed to maintaining the highest level of transparency and security when it comes to your data. Unlike many online services, we do not collect, sell, or store any of your personal data, nor do we track your online activity across the web. Everything you do on our site, whether it’s interacting with the game, making a move, or browsing around, stays completely private and protected by our strong security measures. We believe that privacy is a fundamental right, which is why we take extra care to ensure that not even the creators, developers, or administrators of unscrub can access, view, or store any of your data. You are in complete control of your experience, and we are dedicated to ensuring that you feel safe and anonymous while enjoying the platform. You can rest assured knowing that your actions and information are never shared with third parties, and we never engage in any data harvesting or intrusive tracking practices. When you play unscrub, your privacy is our responsibility, and we take that responsibility seriously. We want you to focus on having fun and enjoying the game without worrying about your data being compromised or misused in any way.</p>
-  <p>Thank you for visiting! We promise your information is safe and secure.</p>
-    document.getElementById('footerMain').textContent = 'keep unscrubbing!';
+      <p>While you play unscrub, we want to make sure you feel confident and at ease knowing that your privacy is our top priority...</p>
+      <p>Thank you for visiting! We promise your information is safe and secure.</p>
+    `;
+    footer.textContent = 'keep unscrubbing!';
     langLabel.textContent = 'English';
   }
+  
+  // Update the flag
   flagIcon.innerHTML = flags[lang];
-  localStorage.setItem('preferredLanguage', lang);
+  
+  // Hide dropdown options after selection
   dropdownOptions.style.display = 'none';
+  
+  // Save the user's language preference to localStorage
+  localStorage.setItem('preferredLanguage', lang);
 }
 
+// Toggle dropdown visibility
 dropdownBtn.addEventListener('click', () => {
   dropdownOptions.style.display = dropdownOptions.style.display === 'flex' ? 'none' : 'flex';
 });
 
+// Handle dropdown option selection
 dropdownOptions.addEventListener('click', (e) => {
   const option = e.target.closest('.dropdown-option');
   if (option) {
-    // Clear localStorage before setting the new language
-    localStorage.removeItem('preferredLanguage');
     setLanguage(option.dataset.lang);
   }
 });
 
+// Load saved language preference from localStorage
 const savedLang = localStorage.getItem('preferredLanguage');
-if (savedLang) setLanguage(savedLang);
-else {
+if (savedLang) {
+  setLanguage(savedLang);
+} else {
+  // Default to user's browser language (PL or EN)
   const userLang = navigator.language || navigator.userLanguage;
-  if (userLang.toLowerCase().startsWith('pl')) setLanguage('pl');
-  else setLanguage('en');
+  if (userLang.toLowerCase().startsWith('pl')) {
+    setLanguage('pl');
+  } else {
+    setLanguage('en');
+  }
 }
 
+// Close dropdown if clicking outside
 document.addEventListener('click', (e) => {
   if (!dropdownBtn.contains(e.target) && !dropdownOptions.contains(e.target)) {
     dropdownOptions.style.display = 'none';
   }
 });
 
+// Go back button
 document.getElementById('goBackBtn').addEventListener('click', () => {
   window.location.href = 'https://unscrub.astrarune.com';
 });
+
 
 </script>
 </body>
