Update privacy policy to include translation for newer policy text + fix Dropdown.

--- a/policy/index.html
+++ b/policy/index.html
@@ -246,16 +246,16 @@ function setLanguage(lang) {
   if (lang === 'pl') {
     title.textContent = 'Twoje dane i użytkowanie [BETA]';
     content.innerHTML = `
-      <p>Podczas gdy grasz w unscrub, chcemy, abyś czuł się pewnie i spokojnie, wiedząc, że Twoja prywatność jest dla nas najważniejsza...</p>
-      <p>Dziękujemy za wizytę! Obiecujemy, że Twoje informacje są bezpieczne i chronione.</p>
+<p>Podczas gdy grasz w unscrub, chcemy, abyś czuł się pewnie i komfortowo, wiedząc, że Twoja prywatność jest naszym najwyższym priorytetem. W pełni szanujemy Twoje prawo do kontrolowania swoich danych osobowych i zobowiązujemy się do utrzymywania najwyższego poziomu przejrzystości i bezpieczeństwa w zakresie Twoich danych. W przeciwieństwie do wielu usług internetowych, nie zbieramy, nie sprzedajemy ani nie przechowujemy żadnych Twoich danych osobowych, ani nie śledzimy Twojej aktywności w internecie. Wszystko, co robisz na naszej stronie, niezależnie od tego, czy grasz w grę, wykonujesz ruch czy przeglądasz stronę, pozostaje całkowicie prywatne i chronione przez nasze silne środki bezpieczeństwa. Wierzymy, że prywatność to fundamentalne prawo, dlatego dbamy o to, by nawet twórcy, programiści czy administratorzy unscrub nie mieli dostępu do Twoich danych, nie mogli ich przeglądać ani przechowywać. Masz pełną kontrolę nad swoim doświadczeniem i jesteśmy zobowiązani do zapewnienia, że czujesz się bezpiecznie i anonimowo podczas korzystania z platformy. Możesz być pewny, że Twoje działania i informacje nigdy nie są udostępniane stronom trzecim, a my nigdy nie angażujemy się w zbieranie danych czy inwazyjne praktyki śledzenia. Kiedy grasz w unscrub, Twoja prywatność jest naszą odpowiedzialnością, a my traktujemy tę odpowiedzialność poważnie. Chcemy, abyś skupił się na zabawie i cieszeniu się grą, nie martwiąc się o to, że Twoje dane mogą zostać naruszone lub niewłaściwie wykorzystane w jakikolwiek sposób.</p>
+<p>Dziękujemy za wizytę! Obiecujemy, że Twoje dane są bezpieczne i chronione.</p>
     `;
     footer.textContent = 'przepraszamy, ale unscrub nie obsługuje jeszcze języka polskiego. przepraszam!';
     langLabel.textContent = 'Polski';
   } else {
     title.textContent = 'Your Data & Usage [BETA]';
     content.innerHTML = `
-      <p>While you play unscrub, we want to make sure you feel confident and at ease knowing that your privacy is our top priority...</p>
-      <p>Thank you for visiting! We promise your information is safe and secure.</p>
+  <p>While you play unscrub, we want to make sure you feel confident and at ease knowing that your privacy is our top priority. We fully respect your right to control your personal information, and we are committed to maintaining the highest level of transparency and security when it comes to your data. Unlike many online services, we do not collect, sell, or store any of your personal data, nor do we track your online activity across the web. Everything you do on our site, whether it’s interacting with the game, making a move, or browsing around, stays completely private and protected by our strong security measures. We believe that privacy is a fundamental right, which is why we take extra care to ensure that not even the creators, developers, or administrators of unscrub can access, view, or store any of your data. You are in complete control of your experience, and we are dedicated to ensuring that you feel safe and anonymous while enjoying the platform. You can rest assured knowing that your actions and information are never shared with third parties, and we never engage in any data harvesting or intrusive tracking practices. When you play unscrub, your privacy is our responsibility, and we take that responsibility seriously. We want you to focus on having fun and enjoying the game without worrying about your data being compromised or misused in any way.</p>
+  <p>Thank you for visiting! We promise your information is safe and secure.</p>
     `;
     footer.textContent = 'keep unscrubbing!';
     langLabel.textContent = 'English';
