Create a timer inside the html (however no code has been made for it yet)

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 </head>
 <body>
   
-  <div id="wpmDisplay">An Astrarune Website.</div>
-  <p class="announcement">WOAH MORE WORDS.</p>
+  <div id="wpmDisplay">Timer Starts When You Press Generate</div>
+  <p class="announcement">Timer!</p>
 
 <button id="howToPlayBtn">How to Play</button>
 <button id="privacyBtn">Data Usage</button>
