--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 </head>
 <body>
   
-  <div id="wpmDisplay">Timer Starts When You Press Generate</div>
+  <div id="wpmDisplay">00:00:00</div>
   <p class="announcement">Timer!</p>
 
 <button id="howToPlayBtn">How to Play</button>
