--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <body>
   
   <div id="wpmDisplay">00:00:00</div>
-  <p class="announcement">Timer!</p>
+  <p class="announcement">unscrub.astrarune.com/blog/</p>
 
 <button id="howToPlayBtn">How to Play</button>
 <button id="privacyBtn">Data Usage</button>
