add lcd imageint to the index.html

--- a/fun/index.html
+++ b/fun/index.html
@@ -10,6 +10,12 @@
   <div class="container">
     <h1>Oh, hello! this feature isn't implemented yet!</h1>
     <p style="margin-top: 20px; font-size: 1.1rem; color: #aaa;">Come back later for the DEMO!</p>
+    
+    <p style="margin-top: 20px; font-size: 1rem; color: #555; text-align: center; width: 50%; margin: 0 auto;">Sorry chat, it might be delayed for a few days or weeks.</p>
+    
+    <div style="text-align: center; margin-top: 30px;">
+      <img src="/fun/lcd.png" alt="LCD image" style="max-width: 100%; height: auto;">
+    </div>
   </div>
 </body>
 </html>
