--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
 <body>
   
   <div id="wpmDisplay">00:00:00</div>
-  <p class="announcement">unscrub.astrarune.com/blog/</p>
+<p class="announcement"><a href="https://unscrub.astrarune.com/fun/" target="_blank">FUN TIME SOON!</a></p>
+
 
 <button id="howToPlayBtn">How to Play</button>
 <button id="privacyBtn">Data Usage</button>
