update the index.html for a better look!

--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
 <body>
   
   <div id="wpmDisplay">00:00:00</div>
-<p class="announcement"><a href="https://unscrub.astrarune.com/fun/" target="_blank">FUN TIME SOON!</a></p>
+<p class="announcement">
+    <a href="https://unscrub.astrarune.com/fun/" target="_blank">FUN TIME SOON!</a>
+</p>
 
 
 <button id="howToPlayBtn">How to Play</button>
