Upgrade the 404 page

--- a/404.html
+++ b/404.html
@@ -8,8 +8,9 @@
 </head>
 <body>
   <div class="container">
-    <h1>404!</h1>
-    <p style="opacity: 0.5;">Sorry, this doesn't exist.</p>
+    <h1>Oops! 404</h1>
+    <p style="opacity: 0.7;">It seems the page you're looking for doesn't exist or has been moved. Don't worry, you can always go back and continue exploring!</p>
+    <a href="https://unscrub.astrarune.com" class="go-back-btn">Go Back</a>
   </div>
 </body>
 </html>
