--- a/index.html
+++ b/index.html
@@ -71,8 +71,10 @@
 
   <div class="main-wrapper">
 
-    <div class="container">
-      <h1>Unscrub</h1>
+<div class="container">
+  <h1><img src="/images/refresh_logo.png" alt="refresh logo" style="width: 20px; height: 20px;"></h1>
+</div>
+
 
       <div class="word-box" id="wordBox">
         <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
