--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   <div class="main-wrapper">
 
 <div class="container">
-  <h1><img src="/images/refresh_logo.png" alt="refresh logo" style="width: 20px; height: 20px;"></h1>
+  <h1><img src="/images/refresh_logo.png" alt="refresh logo" class="small-logo"></h1>
 </div>
 
 
