--- a/index.html
+++ b/index.html
@@ -71,9 +71,7 @@
 
   <div class="main-wrapper">
 
-<div class="container">
-  <h1><img src="/images/refresh_logo.png" alt="refresh logo" class="small-logo"></h1>
-</div>
+<div class="container"> <h1>Unscrub</h1>
 
 
       <div class="word-box" id="wordBox">
