--- a/index.html
+++ b/index.html
@@ -71,9 +71,7 @@
 
   <div class="main-wrapper">
 
-<div class="container">
-  <h1><img src="/images/refresh_logo.png" alt="Unscrub logo" class="small-logo"></h1>
-</div>
+<div class="container"> <h1>Unscrub</h1>
 
       <div class="word-box" id="wordBox">
         <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
