updat ethe signup page

--- a/signup/index.html
+++ b/signup/index.html
@@ -13,13 +13,13 @@
     </h1>
 
     <div class="input-section">
-      <label for="username">Username</label>
+      <label for="username" class="input-label">Username</label>
       <input type="text" id="username" maxlength="30" placeholder="Enter username">
       <div id="usernameFeedback" class="feedback"></div>
     </div>
 
     <div class="input-section">
-      <label for="password">Password</label>
+      <label for="password" class="input-label">Password</label>
       <input type="password" id="password" placeholder="Enter password">
     </div>
 
