change the index.html for the signup

--- a/signup/index.html
+++ b/signup/index.html
@@ -26,14 +26,12 @@
     <button id="signUpBtn">Sign Up</button>
   </div>
 
-  <div id="popup" class="correct-overlay" style="display:none;">
-    <div class="popup-content">
-      <h2>WARNING</h2>
-      <p>Sign up is a BETA feature, and will be fully added in a few days, months, or even years. Press "OK / Continue" to enter.</p>
-      <button id="continueBtn">OK / Continue</button>
-    </div>
+  <div id="popup" class="container popup-container" style="display:none;">
+    <h2>WARNING</h2>
+    <p>Sign up is a BETA feature, and will be fully added in a few days, months, or even years. Press "OK / Continue" to enter.</p>
+    <button id="continueBtn">OK / Continue</button>
   </div>
 
-  <script src="signup/script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
