--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
   <div class="main-wrapper">
 
 <div class="container">
-  <h1>Unscrub</h1>
+  <h1>Unscrub.astrarune.com</h1>
 
 
 <div class="word-box" id="wordBox">
