--- a/index.html
+++ b/index.html
@@ -97,8 +97,9 @@
   <div class="main-wrapper">
 
 <div class="container">
-  <h1>Unscrub.astrarune.com</h1>
-
+  <h1>Unscrub</h1>
+  <p class="subtitle">By astrarune.</p>
+</div>
 
 <div class="word-box" id="wordBox">
   <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
