--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
 
 <script src="script.js"></script>
 <script src="type.js"></script>
+<script src="fun/astrarune.js"></script>
 
 <script>
 const input = document.getElementById("guessInput");
