--- a/fun/index.html
+++ b/fun/index.html
@@ -3,17 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Oh no!</title>
+  <title>Fun Mode</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
-    <h1>Oh, hello! this feature isn't implemented yet!</h1>
-    <p style="margin-top: 20px; font-size: 1.1rem; color: #aaa;">Come back later for the DEMO!</p>
-    
-    <div style="text-align: center; margin-top: 30px;">
-      <img src="/fun/lcd.png" alt="LCD image" style="max-width: 100%; height: auto;">
-    </div>
+    <h1 style="margin-top: 0; margin-bottom: 20px;">Fun Mode is in Development.</h1>
+    <p style="font-size: 1.1rem; color: #aaa;">Fun Mode will be finished soon! Thank you for your patience.</p>
   </div>
 </body>
 </html>
