--- a/mobile/index.html
+++ b/mobile/index.html
@@ -18,19 +18,20 @@
       gap: 25px; /* space between game and button section */
     }
 
-    /* Bottom section styled like the main game container */
-    .bottom-section {
-      width: 480px; /* same width as .container */
-      text-align: center;
-      background: linear-gradient(145deg, #151515, #1b1b1b);
-      padding: 25px;
-      border-radius: 0;
-      box-shadow: 0 0 25px rgba(0, 0, 0, 0.6);
-      display: flex;
-      justify-content: center;
-      gap: 15px;
-      transition: transform 0.2s ease;
-    }
+/* Bottom section styled like the main game container */
+.bottom-section {
+  width: 320px; /* Decreased width */
+  text-align: center;
+  background: linear-gradient(145deg, #151515, #1b1b1b);
+  padding: 15px; /* Reduced padding */
+  border-radius: 0;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.6); /* Reduced shadow */
+  display: flex;
+  justify-content: center;
+  gap: 10px; /* Reduced gap */
+  transition: transform 0.2s ease;
+}
+
 
     .bottom-section:hover {
       transform: translateY(-3px);
