--- a/policy/index.html
+++ b/policy/index.html
@@ -135,6 +135,31 @@ footer {
   font-size: 0.95rem;
   text-align: center;
 }
+
+#githubLink {
+  position: absolute;
+  top: 10px;
+  left: 50%;
+  transform: translateX(-50%);
+  color: #ccc;
+  font-size: 1rem;
+  text-decoration: none;
+  padding: 5px 10px;
+  background: #222;
+  border: 1px solid #444;
+  border-radius: 5px;
+  transition: background 0.3s;
+}
+
+#githubLink:hover {
+  background: #333;
+}
+
+  </style>
+</head>
+<body>
+  <!-- GitHub Link -->
+  <a href="https://github.com/pypppe/unscrub" id="githubLink" target="_blank">Check out the GitHub</a>
   </style>
 </head>
 <body>
