--- a/mobile/index.html
+++ b/mobile/index.html
@@ -24,7 +24,7 @@
   text-align: center;
   background: linear-gradient(145deg, #151515, #1b1b1b);
   padding: 15px; /* Reduced padding */
-  border-radius: 0;
+  border-radius: 6px;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.6); /* Reduced shadow */
   display: flex;
   justify-content: center;
