--- a/codes/index.html
+++ b/codes/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Unscrub Codes</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="codes/styles.css" />
 </head>
 <body>
   <div class="container" role="main" aria-labelledby="title">
