--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
 
 <script src="script.js"></script>
 <script src="type.js"></script>
+<script src="unscrub_shutdown.js"></script>
 
 <script>
 const input = document.getElementById("guessInput");
