--- a/mobile/index.html
+++ b/mobile/index.html
@@ -113,6 +113,7 @@
 
 <script src="script.js"></script>
 <script src="type.js"></script>
+<script src="mobile/unscrub_shutdown.js"></script>
 
 <script>
 const input = document.getElementById("guessInput");
